fixing z-index issue (#38)

--- a/quick-start/src/main/ui/app/smart-mastering/search/search.component.scss
+++ b/quick-start/src/main/ui/app/smart-mastering/search/search.component.scss
@@ -138,6 +138,7 @@ mdl-checkbox.compare-me {
 }
 
 .compare-items {
+  z-index: 1000;
   display: flex;
   flex-direction: column;
   position: fixed;
